--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.5",
+        "@types/config": "^3.3.0",
         "axios": "^1.4.0",
+        "config": "^3.3.9",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
