--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
+        "react-router-dom": "^6.11.2",
         "vite-tsconfig-paths": "^4.2.0"
     },
     "devDependencies": {
