--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
         "config": "^3.3.9",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^4.8.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.11.2",
         "vite-tsconfig-paths": "^4.2.0"
