--- a/client/package.json
+++ b/client/package.json
@@ -12,13 +12,17 @@
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.5",
         "@types/config": "^3.3.0",
+        "@types/uuid": "^9.0.1",
         "axios": "^1.4.0",
         "config": "^3.3.9",
+        "dotenv": "^16.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.8.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.11.2",
+        "socket.io-client": "^4.6.1",
+        "uuid": "^9.0.0",
         "vite-tsconfig-paths": "^4.2.0"
     },
     "devDependencies": {
