--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "mongoose": "^7.2.1",
+    "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
   }
 }
