--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
         "dotenv": "^16.0.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.44.3",
         "react-icons": "^4.8.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.11.2",
