--- a/server/package.json
+++ b/server/package.json
@@ -12,11 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.22",
     "socket.io": "^4.6.1"
   }
