--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.17",
         "@reduxjs/toolkit": "^1.9.5",
         "autoprefixer": "^10.4.14",
         "axios": "^1.4.0",
